# WitchHunt

./: .gitignore  .sconsign.dblite  CMakeLists.txt  File.cpp  File.cpp~  File.h  File.h~  Map.cpp  Map.cpp~  Map.h  Map.h~  README.md  SConstruct  SConstruct~  Surface.cpp  Surface.cpp~  Surface.h  Surface.h~  VirtualScreen.cpp  VirtualScreen.cpp~  VirtualScreen.h  VirtualScreen.h~  demo.cpp  demo.cpp~  readme.txt
INCLUDES/: ABILITY.h  ABILITY_macros.h  BATTLE.h  BATTLE_macros.h  COMMON.h  CTIMER.h  ENTITY.h  ITEM.h  ITEM_macros.h  KEYDRIVER.h  MAL.h  MAPDEF_c_toki.h  MAPDEF_e_jindar_si.h  MAPDEF_e_toki.h  MAPDEF_e_zulari.h  MAPDEF_far_e_jindar_si.h  MAPDEF_far_n_jindar_ni.h  MAPDEF_far_ne_jindar_ni.h  MAPDEF_far_ne_jindar_si.h  MAPDEF_far_nw_jindar_ni.h  MAPDEF_far_nw_jindar_si.h  MAPDEF_far_s_jindar_ni.h  MAPDEF_far_se_jindar_ni.h  MAPDEF_far_se_jindar_si.h  MAPDEF_far_sw_jindar_ni.h  MAPDEF_far_sw_jindar_si.h  MAPDEF_far_w_jindar_si.h  MAPDEF_ginath_bridgei.h  MAPDEF_hollisi.h  MAPDEF_muriasi.h  MAPDEF_n_balmanti.h  MAPDEF_n_jindar_ni.h  MAPDEF_n_jindar_sei.h  MAPDEF_n_toki.h  MAPDEF_ne_balmanti.h  MAPDEF_ne_jindar_ni.h  MAPDEF_ne_jindar_sei.h  MAPDEF_ne_jindar_si.h  MAPDEF_ne_toki.h  MAPDEF_nw_balmanti.h  (+90 more)
SOURCE/: ABILITY.cpp  BATTLE.cpp  COMMON.cpp  CTIMER.cpp  ENTITY.cpp  HACK_TheAbilities.cpp  HACK_TheENTITYCode.cpp  HACK_TheGameCode.cpp  HACK_TheItems.cpp  HACK_TheTriggers.cpp  HACK_TheWORLDMAPCode.cpp  ITEM.cpp  KEYDRIVER.cpp  MapDataHelpers.cpp  STRINGUTILITY.cpp  TriggerHelpers.cpp  WORLDMAP.cpp  ability_Attack.cpp  ability_Curse.cpp  ability_DarkStare.cpp  (+108 more)
(+26 files in other folders)
